# RAG

./: pyproject.toml  requirements.txt
0-DataIngestParse/: 1-dataingestion.ipynb  3-dataparsingdoc.ipynb
0-DataIngestParse/data/word_files/: .~lock.proposal.docx#  proposal.txt
1.0-vector-embedding/: embedding.ipynb
2.0-Vector Stores/: 1.chromadb.ipynb
